--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body {
 
 .post{
     display: flex;
-    align-items:center;
+    align-items:flex-start;
     gap: 15px;
     padding: 10px;
     border-radius: 12px;
@@ -51,6 +51,7 @@ body {
     overflow: hidden;
     opacity: 0;
     transition: all 0.35s ease;
+    line-height: 1.5;
 }
 
 .post.activa{
