--- a/style.css
+++ b/style.css
@@ -34,12 +34,18 @@ body {
 .post{
     display: flex;
     flex-direction: column;
-    align-items:flex-start;
-    gap: 15px;
+    align-items:center;
+    gap: 10px;
     padding: 10px;
     border-radius: 12px;
     transition: all 0.35s ease;
     cursor: pointer;
+}
+
+.contenido-superior{
+    display: flex;
+    align-items: flex-start;
+    gap: 15px;
 }
 
 #imagenlibro{
@@ -53,13 +59,6 @@ body {
     transition: all 0.35s ease;
     line-height: 1.5;
 }
-
-.contenido-superior{
-    display: flex;
-    align-items: flex-start;
-    gap: 15px;
-}
-
 
 .post.activa{
     background: lightblue;
@@ -76,7 +75,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    gap:8px;
+    gap: 5px;
 }
 
 .zona-comentarios input{
