--- a/style.css
+++ b/style.css
@@ -33,16 +33,17 @@ body {
 }
 
 .post {
-    width: 240px; 
+    width: 270px; 
     display: flex;
     flex-direction: column; /* Los comentarios seguirán estando abajo */
     align-items: center;
+    justify-content: center;
     gap: 10px;
-    padding: 15px;
-    border-radius: 12px;
+    padding: 10px;
+    border-radius: 10px;
     transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
     cursor: pointer;
-    background: rgba(255, 255, 255, 0.6);
+    background: rgba(217, 228, 252, 0.6);
     flex-shrink: 0;
 }
 
@@ -55,7 +56,8 @@ body {
 }
 
 .imagenlibro{
-    width: 220px;
+    width: 240px;
+    display: block;
 }
 
 .descripcionlibro, 
@@ -68,7 +70,7 @@ body {
 }
 
 .post.activa{
-    background: lightblue;
+    background: rgb(197, 235, 248);
     box-shadow: 0 15px 25px rgba(0,0,0,0.25);
     transform: scale(1.02);
     width: 550px;
